change width of the video container
Because it was too small, making the text in the video undreadable

--- a/content/courses/testing-foundations/manual-vs-automated-testing.mdx
+++ b/content/courses/testing-foundations/manual-vs-automated-testing.mdx
@@ -9,8 +9,7 @@ Modern software development teams are shipping code into production multiple tim
 ## What is Continuous Integration?
 
 <iframe
-  width="560"
-  height="315"
+  style="width: 100%; aspect-ratio: 16 / 9;"
   src="https://www.youtube.com/embed/USX6AntcPyg"
   title="YouTube video player"
   frameBorder="0"
