fix iframe titles and image alt text

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -1,6 +1,6 @@
 # App Installation & Overview
 
-<YouTube id="-dgsVek-5sE" />
+<YouTube id="-dgsVek-5sE" title="Testing your first application - Lesson 01 - App install and overview" />
 
 ## Intro
 
