--- a/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-forms-and-custom-cypress-commands.mdx
@@ -66,7 +66,7 @@ You can click on the images to enlarge them.
 
 In case that explanation went too fast or was not very clear, we have created a short video that explains in-depth how our custom Cypress command works.
 
-<YouTube id="5F7t9IPoUvo" />
+<YouTube id="5F7t9IPoUvo" title="Real World Testing with Cypress - custom cypress commands"/>
 
 Throughout the rest of this course, we will be using this custom Cypress command to get our elements for testing. Custom Cypress commands are powerful and useful. You will find yourself writing them all the time once you gain more experience with Cypress.
 
