--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -1,6 +1,6 @@
 # Installing Cypress and writing your first test
 
-<YouTube id="x0QuiEJUf6s" />
+<YouTube id="x0QuiEJUf6s" title="Testing your first application - Lesson 02 - Installing Cypress and writing your first test"/>
 
 ## Installing Cypress
 
@@ -240,7 +240,7 @@ Congratulations! You just wrote your first Cypress E2E test 🎉
 
 ## Aside: Command Chaining
 
-<YouTube id="WHDvViZazWI" />
+<YouTube id="WHDvViZazWI" title="Real World Testing with Cypress - Command Chaining"/>
 
 Let's briefly discuss what is happening on this line:
 
@@ -349,7 +349,7 @@ If we use dev tools to inspect one of these features, we will see the following 
       stroke-width="2"
       stroke="currentColor"
       aria-hidden="true"
-      class="absolute h-6 w-6 text-blue-500"
+      class="absolute w-6 h-6 text-blue-500"
     >
       <path
         stroke-linecap="round"
@@ -357,9 +357,9 @@ If we use dev tools to inspect one of these features, we will see the following 
         d="M5 13l4 4L19 7"
       ></path>
     </svg>
-    <p class="ml-9 text-lg font-medium leading-6 text-gray-500">4 Courses</p>
+    <p class="text-lg font-medium leading-6 text-gray-500 ml-9">4 Courses</p>
   </dt>
-  <dd class="mt-2 ml-9 text-base text-gray-500"></dd>
+  <dd class="mt-2 text-base text-gray-500 ml-9"></dd>
 </div>
 ```
 
