--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -6,13 +6,13 @@ Knowing how to debug failing tests is arguably one of the most important and use
 
 The Cypress UI is one of the fastest ways to figure out what went wrong with your tests.
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/failing-test.png)
+![Screenshot of Cypress Command Log with a failing test marked as red with the 'contains: 4 Courses' assertion failing and a full error message printed as 'Timed out retrying after 4000ms, expected to find 4 Courses within the element dt but never did'. There's also a stack trace highlighting the exact line of test code that failed.](/images/cypress-fundamentals/how-to-debug-failing-tests/failing-test.png)
 
 It can also be incredibly useful to see all of the steps your tests took before the error was triggered. When you click on a step, Cypress will output useful information to the browser's console.
 
 For example, in the failing test above, when clicking upon the assertion step, Cypress logs out the actual array in the console.
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-console.png)
+![Screenshot of browser displaying the Cypress command log with a failed assertion on 'contains: 4 Courses' and the 'eq: 1' command highlighted in purple. The Developer Tool's console is exapanded showing log details about the 'eq' command such as the command, selector, what element it was applied to, what the command yielded, and the number of elements found.](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-console.png)
 
 ## Screenshots & Videos
 
@@ -26,7 +26,7 @@ There are two useful ways to log information from your tests. One way is to use 
 
 [cy.log()](https://docs.cypress.io/api/commands/log) will print a message to the Cypress Command Log
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/cy-log-custom-message.png)
+![Screenshot of Cypress command log with an arrow pointing to 'log: my custom message' in the passing test's log](/images/cypress-fundamentals/how-to-debug-failing-tests/cy-log-custom-message.png)
 
 You can also use `console.log()` which will log to the browser's console.
 
@@ -34,10 +34,10 @@ You can also use `console.log()` which will log to the browser's console.
 console.log("my custom message")
 ```
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.55.53_PM.png)
+![Screenshot of Developer Tool's Console tab with 'my custom message' as a log in the Console](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.55.53_PM.png)
 
 ## Browser Dev Tools
 
 Since Cypress runs in the browser, you have full access to all of the information from your browser's developer tools. This means you can use the same techniques and functionality you are used to using when debugging issues with your application code to debug your failing Cypress tests too.
 
-![](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.png)
+![Screenshot of the browser showing the Cypress UI with the command log, application under test, and developer tools expanded at the bottom showing the command logs in the console](/images/cypress-fundamentals/how-to-debug-failing-tests/browser-dev-tools.png)
