misc: Fix images missing alt text to improve a11y

--- a/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -22,7 +22,7 @@ cypress run --browser Firefox
 
 You can also select which browser to run via the UI.
 
-![](/images/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports/choose-a-browser.png)
+![Screenshot of Cypress App on a screen that says 'Choose a Browser' with buttons to select Chrome Canary, Chrome, Electron, Firefox, and Firefox Developer Edition. The Chrome v103 browser is selected with a button to 'Start E2E Testing in Chrome'](/images/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports/choose-a-browser.png)
 
 You can even do this on a test by test basis by passing an [options object to your tests](https://docs.cypress.io/guides/guides/cross-browser-testing#Running-Specific-Tests-by-Browser).
 
