--- a/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/integration-and-api-tests.mdx
@@ -27,6 +27,6 @@ One of the pleasant aspects of using Cypress for testing APIs is that you can ea
 
 Clicking upon the request step in the Cypress Command Log, we can see all of the response data in the browser's console.
 
-![](/images/advanced-cypress-concepts/integration-and-api-tests/Screen_Shot_2021-09-01_at_9.20.04_AM.png)
+![Screenshot of browser testing in the Cypress App showing a api-users.spec.ts file running. The request command is higlighted in purple in the Command Log. The devtools are open displaying the request and response data from the request.](/images/advanced-cypress-concepts/integration-and-api-tests/Screen_Shot_2021-09-01_at_9.20.04_AM.png)
 
 This allows you to quickly inspect and debug the data coming back from your APIs against the actual data returned in the original requests.
