--- a/content/real-world-examples/authentication/login-errors.mdx
+++ b/content/real-world-examples/authentication/login-errors.mdx
@@ -51,7 +51,7 @@ cy.get("#username-helper-text")
   .and("contain", "Username is required")
 ```
 
-![](/images/real-world-examples/authentication/login-errors/Screen_Shot_2021-06-28_at_1.40.59_PM.png)
+![Screenshot of Cypress App with a test titled 'User Authentication > should display login errors'. There are several commands in the Cypress Command Log in the test body including visit, get, type, find, clear, and blur. The tests are showing as green which is passing. The application under test is showing a Sign In page.](/images/real-world-examples/authentication/login-errors/Screen_Shot_2021-06-28_at_1.40.59_PM.png)
 
 ## Password
 
