--- a/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
+++ b/content/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout.mdx
@@ -89,7 +89,7 @@ Next, we click on the "Sign Up" link
 cy.getBySel("signup").click()
 ```
 
-![](/images/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout/Screen_Shot_2021-06-28_at_2.20.07_PM.png)
+![Screenshot of Cypress App showing the test with the title 'User Authentication > should allow a user to signup, log in, create a bank account & log out'. The Cypress Command Log shows a visit, get, and click command with details. The application under test shows a sign up page of the real world app.](/images/real-world-examples/authentication/sign-up-login-create-bank-account-and-logout/Screen_Shot_2021-06-28_at_2.20.07_PM.png)
 
 We then assert that the sign-up title is visible and contains "Sign Up."
 
