--- a/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
+++ b/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
@@ -58,7 +58,7 @@ cy.getBySel("bankaccount-new").click()
 cy.location("pathname").should("eq", "/bankaccounts/new")
 ```
 
-![](/images/real-world-examples/bank-accounts/creating-a-new-bank-account/Screen_Shot_2021-06-30_at_10.21.15_AM.png)
+![Screenshot of the Cypress App. The application under test is showing a 'Create Bank Account' screen with 3 inputs and a save button. The Cypress Command Log is displaying the test body including get, click, and location commands.](/images/real-world-examples/bank-accounts/creating-a-new-bank-account/Screen_Shot_2021-06-30_at_10.21.15_AM.png)
 
 Then, we fill out the new bank account form with our bank account information and save it.
 
