--- a/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
+++ b/content/real-world-examples/transaction-view/transaction-view-overview-and-setup.mdx
@@ -84,9 +84,9 @@ cy.database("find", "users").then((user: User) => {
 })
 ```
 
-![](/images/real-world-examples/transaction-view/transaction-view-overview-and-setup/Screen_Shot_2021-09-16_at_9.18.09_AM.png)
+![Screenshot of Cypress App with the 'login by xstate' custom command highlighted in purple in the Cypress Command Log. The text beside the command says 'Authentication | Katharina_Be..'. The application under test show's the Real Worl App's sign in page with inputs and a submit button. The DevTools console is open with details about the loginbyxstate command including the command name, username, and password.](/images/real-world-examples/transaction-view/transaction-view-overview-and-setup/Screen_Shot_2021-09-16_at_9.18.09_AM.png)
 
-![](/images/real-world-examples/transaction-view/transaction-view-overview-and-setup/Screen_Shot_2021-09-16_at_9.18.44_AM.png)
+![Screenshot of Cypress App with the 'database' custom command highlighted in purple in the Cypress Command Log. The test beside the command says 'Finding within transactions data'. The application under test is showing a loading list UI within the Real World App. The DevTools Console is opened showing the details of the database command including the command name, entity, and query results.](/images/real-world-examples/transaction-view/transaction-view-overview-and-setup/Screen_Shot_2021-09-16_at_9.18.44_AM.png)
 
 Finally, we click on the personal transaction tab and wait on the `@personalTransactions` intercept.
 
