--- a/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
+++ b/content/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page.mdx
@@ -32,4 +32,4 @@ cy.getBySel("nav-transaction-tabs").should("not.exist")
 cy.getBySel("transaction-detail-header").should("be.visible")
 ```
 
-![](/images/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page/Screen_Shot_2021-09-16_at_9.26.40_AM.png)
+![Screenshot showing the Cypress App with the 'assert' command highlighted in purple in the Cypress Command Log. The assert text says 'expected data-text=nav-transition-tabs not to exist in the DOM.'](/images/real-world-examples/transaction-view/transactions-navigation-tabs-are-hidden-on-a-transaction-view-page/Screen_Shot_2021-09-16_at_9.26.40_AM.png)
